--- a/src/app/home/user-account/user-account.component.html
+++ b/src/app/home/user-account/user-account.component.html
@@ -1,3 +1,6 @@
-<p>
-  user-account works!
-</p>
+<mat-card >
+<ul *ngFor= "let book of books">
+	<li *ngIf="book.issuedTo == 18069">{{book.title}}<br>{{book.writer}} <hr></li>
+
+</ul>
+</mat-card>
