--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,8 @@
 <mat-tab-group>
   <mat-tab label="My account"> <app-user-account></app-user-account> </mat-tab>
   <mat-tab label="Books"> <app-books></app-books> </mat-tab>
-  <!-- <mat-tab label="Third"> Content 3 </mat-tab> -->
+  <mat-tab label="Manage Books"> <app-create-books></app-create-books> </mat-tab>
+   <mat-tab label="Manage Users"> <app-create-user></app-create-user> </mat-tab>
 </mat-tab-group>
 
 <button mat-button (click)="logout()">Logout</button>
