--- a/src/app/home/user-account/user-account.component.html
+++ b/src/app/home/user-account/user-account.component.html
@@ -7,17 +7,20 @@
  -->
 <mat-card>
 
-<ul *ngFor= "let book of books">
+  <!-- {{books | json}} -->
+
+<ul *ngFor= "let book of books ; let j = index">
 
 <mat-accordion *ngIf = "book.issuedTo == 18069">
   
+
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>
        <li >
 		<span>
 		{{book.title}}
-		<br><span class="writer">{{book.writer}}</span>
+		<br><span class="writer">{{book.writer}} </span>
 		</span>
 		
 	</li>
@@ -27,6 +30,14 @@
         
       </mat-panel-description>
     </mat-expansion-panel-header>
+
+  
+    <li *ngFor = "let review of getArray(book.reviews); let i = index"> {{review.body}}</li>
+
+    <mat-form-field>
+      <input matInput [(ngModel)] = "book[review]" placeholder="Review....">
+    </mat-form-field>
+    <button mat-button (click)= "makeReview(j , book[review])" >Submit</button>
 
   </mat-expansion-panel>
 </mat-accordion>
