--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -6,7 +6,7 @@
 <mat-tab-group>
   
   <mat-tab label="Sign in"> <app-sign-in></app-sign-in> </mat-tab>
-  <mat-tab label="Sign up"> <app-sign-up></app-sign-up> </mat-tab>
+  <!-- <mat-tab label="Sign up"> <app-sign-up></app-sign-up> </mat-tab> -->
   
 </mat-tab-group>
 
