--- a/src/app/authentication/sign-in/sign-in.component.html
+++ b/src/app/authentication/sign-in/sign-in.component.html
@@ -1,14 +1,14 @@
 <div class="example-container">
   <mat-form-field>
-    <input matInput [(ngModel)] = "emails" placeholder="Enter your email" [formControl]="email" required>
+    <input matInput (keydown.enter)="signIn()" [(ngModel)] = "emails" placeholder="Enter your email" [formControl]="email" required>
     <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
   </mat-form-field>
 
    <mat-form-field>
-    <input matInput [(ngModel)]="password" placeholder="Enter your password" [type]="hide ? 'password' : 'text'">
+    <input matInput (keydown.enter)="signIn()" [(ngModel)]="password" placeholder="Enter your password" [type]="hide ? 'password' : 'text'">
     <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
   </mat-form-field>
 
-  <button mat-button  (click) = "signIn()" >Login</button>
+  <button mat-button   (click) = "signIn()" >Login</button>
 
 </div>
