--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+
 ::-webkit-scrollbar { 
     display: none; 
+}
+
+@import '~@angular/material/theming';
+
+@include mat-core();
+
+
+@import 'theme.scss';
+
+
+.theme {
+  
+ 
+  @include angular-material-theme($my-theme);
 }
