--- a/src/app/home/issue-books/issue-books.component.html
+++ b/src/app/home/issue-books/issue-books.component.html
@@ -5,12 +5,12 @@
   <div>
 
      <mat-form-field>
-    <input matInput [(ngModel)]="studentID" ng-value=studentID placeholder="Student ID" >
+    <input matInput (keydown.enter) = "issue()"  [(ngModel)]="studentID" ng-value=studentID placeholder="Student ID" >
    
   </mat-form-field>
 
   <mat-form-field>
-    <input matInput [(ngModel)] = qrResultString ng-value=qrResultString placeholder="Book ID" >
+    <input matInput (keydown.enter) = "issue()" [(ngModel)] = qrResultString ng-value=qrResultString placeholder="Book ID" >
     
   </mat-form-field>
 
@@ -57,7 +57,7 @@
 
 
  <div *ngIf="availableDevices">
-  <select (change)="onDeviceSelectChange($event.target.value)">
+  <select (keydown.enter) = "issue()" (change)="onDeviceSelectChange($event.target.value)">
     <option value="" [selected]="!selectedDevice">No Device</option>
     <option *ngFor="let device of availableDevices" [value]="device.deviceId" [selected]="selectedDevice && device.deviceId === selectedDevice.deviceId">{{ device.label }}</option>
   </select>
